Closed Bug 1489566 Opened 6 years ago Closed 6 years ago

Bug 1488628 - Change some nsIWebNavigation method arguments from wstring to AString

Categories

(MailNews Core :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 64.0

People

(Reporter: jorgk-bmo, Assigned: jorgk-bmo)

Details

Attachments

(2 files)

1:36.14 c:/mozilla-source/comm-central/comm/mailnews/base/src/nsMessenger.cpp(481,24):  error: no viable conversion from 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') to 'const nsAString' (aka 'const nsTSubstring<char16_t>')

And perhaps more.
This should be it, webNav->LoadURI is found three times in the index.
Assignee: nobody → jorgk
Attachment #9007284 - Flags: review?(acelists)
Target Milestone: --- → Thunderbird 64.0
Version: 24 → Trunk
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/489af20156c6
Bug 1488628: Change arguments of nsIWebNavigation::LoadURI(). rs=bustage-fix
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Comment on attachment 9007284 [details] [diff] [review]
1489566-loaduri.patch

Review of attachment 9007284 [details] [diff] [review]:
-----------------------------------------------------------------

Stealing this since I looked anyway. Looks good, r=mkmelin
Attachment #9007284 - Flags: review?(acelists) → review+
OK, we can actually improve this.
Attachment #9007319 - Flags: review?(mkmelin+mozilla)
Comment on attachment 9007319 [details] [diff] [review]
1489566-follow-up.patch

Review of attachment 9007319 [details] [diff] [review]:
-----------------------------------------------------------------

Yeah, r=mkmelin
Attachment #9007319 - Flags: review?(mkmelin+mozilla) → review+
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/5eade664a1a9
Follow-up: Convert 1st argument of DisplayURIInMessagePane() to nsAString. r=mkmelin
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: