Bug 1489566 - Bug 1488628: Change arguments of nsIWebNavigation::LoadURI(). rs=bustage-fix